# url-shorting-service-rust

./: .dockerignore  .env  Cargo.toml  README.md
docker/: Dockerfile  init.sql  run_mysql.sh  run_mysql_build.sh
src/: db.rs  main.rs  models.rs  routes.rs
