[package]
name = "url-shorting-service-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
dotenv = "0.15"
lazy_static = "1.4"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "time", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }